--- a/css/common.css
+++ b/css/common.css
@@ -1,17 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap');
+
+/* font-family: 'Noto Sans KR', serif; */
+
 
 /* RESET CSS */
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
-ul,
-li {
-  list-style: none;
-}
+ul, li {list-style: none;}
 a {
   text-decoration: none;
   color: inherit;
@@ -47,17 +47,18 @@ body {
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
   background-color: var(--main-color);
-  width: 100vw;
-  height: 100vh;
+  width: 100vw; height: 100vh;
 }
 
 /* ROOT */
 
 :root {
   --main-color: #021d44;
+  --sub-color: #003a84;
   --accent-color: #ff3e55;
   --white-color: #f7f6f5;
 }
+
 
 /* 공통 fixed 작업 */
 
@@ -77,48 +78,78 @@ body {
   top: 0;
   right: 0;
 }
+
 .main_nav {
   position: fixed;
   top: 0;
   right: 0;
-  width: 0;
   height: 100vh;
-  width: 8.6vw;
-  border-left: 1px solid var(--white-color);
+  width: 9vw;
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .nav_conts {
   position: absolute;
   color: var(--white-color);
-  text-align: center;
+  text-align: left;
   font-weight: 900;
-  font-size: 24px;
+  font-size: 22px;
 }
 
+.nav_conts:hover {color: var(--accent-color);}
+
 .nav_work {
-  top: 10%;
+  top: 9%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .nav_about {
-  bottom: 10%;
+  bottom: 7%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .home_link {
-  position: fixed;
-  top: 4vw;
-  left: 4vw;
+  position: fixed; top: 4vw; left: 4vw;
+  font-size: .9rem; font-weight: 400; 
+  line-height: 1.8; letter-spacing: .7rem;
+  text-transform: uppercase;
 }
+
 .home_link a {
   color: var(--white-color);
 }
 
 .home_link a:hover {
-  color: var(--white-color);
+  color: var(--accent-color);
   text-decoration: none;
 }
+
+.mail_link {
+  position: fixed; bottom: 4vw; left: 4vw;
+  width: 44px; height: 44px;
+  background-color: var(--accent-color);
+  border-radius: 100%;
+}
+
+.mail_link a {
+  display: inline-flex;
+  justify-content: center; align-items: center;
+  width: 100%; height: 100%;
+}
+
+.mail_link a svg { 
+  width: 60%; height: 100%; 
+  fill: var(--main-color);
+}
+
+.mail_link:hover {background-color: var(--sub-color);}
+.mail_link:hover a svg {fill: var(--accent-color);}
+
+
+
+
 
 @media screen and (max-width: 800px) {
   .main_nav {
