--- a/subpage/css/detail.css
+++ b/subpage/css/detail.css
@@ -4,7 +4,7 @@
   padding-bottom: 50px;
 }
 h1 {
-  font-size: 70px;
+  font-size: 4rem;
   line-height: 1.4em;
   text-align: center;
   font-weight: 900;
