--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,13 @@ body {
     overflow-y: visible;
 }
 
+#hero {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    position: relative;
+  }
+
 #about_wrap{
     width: 100%;
     height: 100%;
