--- a/scrolltest/css/styles.css
+++ b/scrolltest/css/styles.css
@@ -1,22 +1,32 @@
-html,
 body {
   height: 100%;
   overflow: hidden;
 }
 
-.slide_wrap {
-  width: 200%;
+#slide_wrap {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  display: flex;
   background-size: 210% auto;
 }
 
-.slide {
+#slide {
   display: flex;
   align-items: center;
   justify-content: center;
   list-style: none;
 }
 
-p {
+#slide li {
+  margin-right: 150px;
+}
+
+#slide img {
+  height: 400px;
+}
+
+.slide_contents {
   color: #fff;
   font-size: 4vw;
   font-family: monospace;
