--- a/css/detail.css
+++ b/css/detail.css
@@ -20,7 +20,9 @@ p {
   font-weight: 200;
 }
 
-
+.hero_bg_box {
+  z-index: -1;
+}
 .detail_container {
   width: 60%;
   margin: 150px auto 0;
@@ -31,7 +33,7 @@ p {
 .detail_img {
   background-color: gray;
   width: 100%;
-  height: 300px;
+  
   border: none;
   margin-top: 70px;
 }
@@ -47,7 +49,7 @@ p {
 
 .detail_text_wrap {
   display: flex;
-  margin-top: 48px;
+  margin-top: 52px;
 }
 
 
@@ -62,6 +64,10 @@ p {
 
 .detail_work h3 , .detail_expaine h3 {
   margin-bottom: 7.4px;
+}
+
+.detail_work p a:hover {
+  color: var(--accent-color);
 }
 
 .detail_expaine {
