--- a/css/about.css
+++ b/css/about.css
@@ -26,7 +26,7 @@ body {
 #top h2{
     font-size: 72px; 
     font-weight: 600;
-    color:rgb(247, 246, 245);
+    color:var(--white-color);
 }
 .intro{
     margin: 20px auto;
@@ -47,15 +47,15 @@ body {
 .intro p{
     font-size: 33.6px;
     line-height: 40px;
-    color:rgb(247, 246, 245);
+    color:var(--white-color);
 
 }
 .body{
     font-size: 24px;
-    color:rgb(247, 246, 245);
+    color:var(--white-color);
 }
 .s1 strong{
-    color:rgb(255, 62, 85);
+    color:var( --accent-color);
 }
 .graphic img{
     width: 400px;
@@ -70,7 +70,7 @@ body {
     justify-content: space-between;
     font-size: 24px;
     line-height: 40px;
-    color: rgb(247, 246, 245);
+    color: var(--white-color);
     /* top:1000px; */
     /* left: 300px; */
 }
@@ -95,7 +95,7 @@ body {
     justify-content: space-between;
     font-size: 20px;
     line-height: 40px;
-    color: rgb(247, 246, 245);    
+    color: var(--white-color);    
     text-align: left;
     display: none;
 }
